@@ -1,6 +1,7 @@
 2015-12-10  Kirit Saelensminde  <kirit@felspar.com>
- New `fostlib::crypto_bytes` function returns an array of bytes from a cryptographically secure location.
- Add new `fostlib::array_view` that allows for looking at memory areas.
+ * New `fostlib::crypto_bytes` function returns an array of bytes from a cryptographically secure location.
+ * Add new `fostlib::array_view` that allows for looking at memory areas.
+ * Implement PKBKDF2 with HMAC and SHA256 that produces a fixed length (64 bytes) derived key.
 
 2015-12-07  Kirit Saelensminde  <kirit@felspar.com>
  Allow HMAC with std::array<unsigned char, n> secrets.
